[package]
name = "forger"
version = "0.1.0"
authors = ["freddd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
serde_json = "1.0.61"
hmac = "0.10.1"
sha2 = "0.9.2"

[[bin]]
name = "forger"
path = "src/main.rs"
