[package]
name = "forger"
version = "0.1.0"
authors = ["freddd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.17"
serde = { version = "1.0.145", features = ["derive"] }
base64 = "0.13.0"
serde_json = "1.0.86"
hmac = "0.12.1"
sha2 = "0.10.6"
log = "0.4.17"
env_logger = "0.9.1"
openssl = { version = "0.10.42", features = ["vendored"] }
rayon = "1.5.3"

[[bin]]
name = "forger"
path = "src/main.rs"
